Convert down to java 8